# perseus-testing-website

./: .gitignore  Cargo.toml  README.md  tailwind.config.js
.github/workflows/: rust.yml
src/: error_views.rs  main.rs  tailwind.css
src/components/: dropdown.rs  header.rs  mod.rs
src/templates/: index.rs  login.rs
